Update swagger documentation
